--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "husky": {
         "hooks": {
             "pre-commit": "npm test",
-            "pre-push": "npm test",
-            "...": "..."
+            "pre-push": "npm test"
         }
     }
 }
