--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "npm test",
-            "pre-push": "npm test"
+            "pre-commit": "echo Gdsdasd"
         }
     }
 }
