--- a/package.json
+++ b/package.json
@@ -1,10 +1,5 @@
 {
-    "dependencies": {
-        "husky": "^3.0.4"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "echo Gdsdasd"
-        }
+    "scripts": {
+        "precommit": "asdfasfasdf"
     }
 }
