--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     },
     "husky": {
         "hooks": {
-            "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+            "commit": "npx git-cz"
         }
     }
 }
