--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
     "scripts": {
-        "commit": "npx git-cz"
+        "commit": "npx git-cz",
+        "log": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+        "release": "standard-version"
     }
 }
