--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "version": "2.0.0",
     "scripts": {
         "commit": "npx git-cz",
         "log": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
